--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["packages/*"]
+members = ["examples/*", "packages/*"]
 resolver = "2"
 
 [workspace.package]
@@ -10,3 +10,14 @@ repository = "https://github.com/RustForWeb/auth"
 version = "0.0.1"
 
 [workspace.dependencies]
+actix-files = "0.6.6"
+actix-web = "4.9.0"
+axum = "0.7.9"
+console_error_panic_hook = "0.1.2"
+leptos = "0.7.0"
+leptos_actix = "0.7.0"
+leptos_axum = "0.7.0"
+leptos_meta = "0.7.0"
+leptos_router = "0.7.0"
+tokio = "1.42.0"
+wasm-bindgen = "0.2.97"
