Rename to Shield

--- a/book/book.toml
+++ b/book/book.toml
@@ -3,15 +3,15 @@ authors = ["Daniëlle Huisman"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Auth"
+title = "Shield"
 
 [preprocessor.tabs]
 
 [output.html]
 additional-css = ["theme/tabs.css", "theme/theme.css"]
 additional-js = ["theme/tabs.js"]
-edit-url-template = "https://github.com/RustForWeb/auth/edit/main/book/{path}"
-git-repository-url = "https://github.com/RustForWeb/auth"
+edit-url-template = "https://github.com/RustForWeb/shield/edit/main/book/{path}"
+git-repository-url = "https://github.com/RustForWeb/shield"
 
 [rust]
 edition = "2021"
