--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ resolver = "2"
 authors = ["Rust For Web <info@rustforweb.org>"]
 edition = "2021"
 license = "MIT"
-repository = "https://github.com/RustForWeb/auth"
+repository = "https://github.com/RustForWeb/shield"
 version = "0.0.1"
 
 [workspace.dependencies]
