Add start of Shield SeaORM

--- a/packages/storage/shield-seaorm/Cargo.toml
+++ b/packages/storage/shield-seaorm/Cargo.toml
@@ -9,3 +9,11 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+async-trait.workspace = true
+sea-orm.workspace = true
+sea-orm-migration.workspace = true
+serde.workspace = true
+
+[features]
+default = []
+entity = []
