--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ version = "0.0.1"
 [workspace.dependencies]
 actix-files = "0.6.6"
 actix-web = "4.9.0"
+async-std = "1.13.0"
+async-trait = "0.1.83"
 axum = "0.7.9"
 console_error_panic_hook = "0.1.2"
 leptos = "0.7.0"
@@ -19,5 +21,8 @@ leptos_actix = "0.7.0"
 leptos_axum = "0.7.0"
 leptos_meta = "0.7.0"
 leptos_router = "0.7.0"
+sea-orm = "1.1.2"
+sea-orm-migration = "1.1.2"
+serde = "1.0.215"
 tokio = "1.42.0"
 wasm-bindgen = "0.2.97"
