--- a/packages/storage/shield-seaorm/Cargo.toml
+++ b/packages/storage/shield-seaorm/Cargo.toml
@@ -13,6 +13,7 @@ async-trait.workspace = true
 sea-orm.workspace = true
 sea-orm-migration.workspace = true
 serde.workspace = true
+shield = { path = "../../core/shield"}
 
 [features]
 default = []
