Shield Actix/Axum: Add session support to examples

--- a/packages/integrations/shield-actix/Cargo.toml
+++ b/packages/integrations/shield-actix/Cargo.toml
@@ -9,4 +9,5 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+actix-session.workspace = true
 shield = { path = "../../core/shield"}
