--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ version = "0.0.1"
 
 [workspace.dependencies]
 actix-files = "0.6.6"
+actix-session = "0.10.1"
 actix-web = "4.9.0"
 async-std = "1.13.0"
 async-trait = "0.1.83"
@@ -25,4 +26,5 @@ sea-orm = "1.1.2"
 sea-orm-migration = "1.1.2"
 serde = "1.0.215"
 tokio = "1.42.0"
+tower-sessions = "0.13.0"
 wasm-bindgen = "0.2.97"
