--- a/examples/leptos-actix/Cargo.toml
+++ b/examples/leptos-actix/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 actix-files = { workspace = true, optional = true }
+actix-session = { workspace = true, features = ["cookie-session"], optional = true }
 actix-web = { workspace = true, optional = true }
 console_error_panic_hook.workspace = true
 leptos.workspace = true
@@ -23,9 +24,11 @@ leptos_router.workspace = true
 wasm-bindgen.workspace = true
 
 [features]
+default = ["ssr"]
 hydrate = ["leptos/hydrate"]
 ssr = [
     "dep:actix-files",
+    "dep:actix-session",
     "dep:actix-web",
     "dep:leptos_actix",
     "leptos/ssr",
