--- a/examples/leptos-axum/Cargo.toml
+++ b/examples/leptos-axum/Cargo.toml
@@ -19,15 +19,19 @@ leptos.workspace = true
 leptos_axum = { workspace = true, optional = true }
 leptos_meta.workspace = true
 leptos_router.workspace = true
+time =  "0.3.37"
 tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
+tower-sessions = {workspace = true, optional = true}
 wasm-bindgen.workspace = true
 
 [features]
+default = ["ssr"]
 hydrate = ["leptos/hydrate"]
 ssr = [
     "dep:axum",
     "dep:leptos_axum",
     "dep:tokio",
+    "dep:tower-sessions",
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
