Shield: Add attempt at using Any for storage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ leptos_router = "0.7.0"
 sea-orm = "1.1.2"
 sea-orm-migration = "1.1.2"
 serde = "1.0.215"
+serde_json = "1.0.133"
 tokio = "1.42.0"
 tower-sessions = "0.13.0"
 wasm-bindgen = "0.2.97"
