--- a/examples/seaorm/Cargo.toml
+++ b/examples/seaorm/Cargo.toml
@@ -14,11 +14,15 @@ async-std = { workspace = true, features = ["attributes", "tokio1"] }
 sea-orm = { workspace = true, features = [
     "macros",
     "runtime-tokio-native-tls",
-    "sqlx-sqlite",
+    "sqlx-mysql",
+    "sqlx-postgres",
+    "sqlx-sqlite"
 ] }
 sea-orm-migration = { workspace = true, features = [
     "runtime-tokio-native-tls",
-    "sqlx-sqlite",
+    "sqlx-mysql",
+    "sqlx-postgres",
+    "sqlx-sqlite"
 ] }
 shield-seaorm = { path = "../../packages/storage/shield-seaorm", features = [
     "all-providers",
