--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,5 +70,11 @@ jobs:
                   cache-on-failure: true
                   save-if: ${{ github.ref == 'refs/heads/main' }}
 
+            - name: Install Cargo Binary Install
+              uses: cargo-bins/cargo-binstall@main
+
+            - name: Install crates
+              run: cargo binstall --force -y sea-orm-cli
+
             - name: Test
               run: cargo test --all-features
