--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,20 @@ async-std = "1.13.0"
 async-trait = "0.1.83"
 axum = "0.7.9"
 console_error_panic_hook = "0.1.2"
+futures = "0.3.31"
+http = "1.2.0"
 leptos = "0.7.0"
 leptos_actix = "0.7.0"
 leptos_axum = "0.7.0"
 leptos_meta = "0.7.0"
 leptos_router = "0.7.0"
+thiserror = "2.0.7"
 sea-orm = "1.1.2"
 sea-orm-migration = "1.1.2"
 serde = "1.0.215"
 serde_json = "1.0.133"
 tokio = "1.42.0"
+tower-layer = "0.3.3"
+tower-service = "0.3.3"
 tower-sessions = "0.13.0"
 wasm-bindgen = "0.2.97"
