--- a/examples/leptos-axum/Cargo.toml
+++ b/examples/leptos-axum/Cargo.toml
@@ -19,9 +19,12 @@ leptos.workspace = true
 leptos_axum = { workspace = true, optional = true }
 leptos_meta.workspace = true
 leptos_router.workspace = true
-time =  "0.3.37"
+shield = { path = "../../packages/core/shield", features = ["dummy"] }
+shield-axum = { path = "../../packages/integrations/shield-axum", optional = true }
+shield-leptos = { path = "../../packages/integrations/shield-leptos" }
+time = "0.3.37"
 tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
-tower-sessions = {workspace = true, optional = true}
+tower-sessions = { workspace = true, optional = true }
 wasm-bindgen.workspace = true
 
 [features]
@@ -30,11 +33,13 @@ hydrate = ["leptos/hydrate"]
 ssr = [
     "dep:axum",
     "dep:leptos_axum",
+    "dep:shield-axum",
     "dep:tokio",
     "dep:tower-sessions",
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "shield-leptos/axum",
 ]
 
 [package.metadata.leptos]
