--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ version = "0.0.1"
 [workspace.dependencies]
 actix-files = "0.6.6"
 actix-session = "0.10.1"
+actix-utils = "3.0.1"
 actix-web = "4.9.0"
 async-std = "1.13.0"
 async-trait = "0.1.83"
