--- a/packages/integrations/shield-tower/Cargo.toml
+++ b/packages/integrations/shield-tower/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+async-trait.workspace = true
 http.workspace = true
 shield = { path = "../../core/shield" }
 tower-layer.workspace = true
