--- a/examples/leptos-actix/Cargo.toml
+++ b/examples/leptos-actix/Cargo.toml
@@ -24,8 +24,8 @@ leptos_actix = { workspace = true, optional = true }
 leptos_meta.workspace = true
 leptos_router.workspace = true
 shield = { path = "../../packages/core/shield", features = ["dummy"] }
-shield-actix = { path = "../../packages/integrations/shield-actix", optional = true }
 shield-leptos = { path = "../../packages/integrations/shield-leptos" }
+shield-leptos-actix = { path = "../../packages/integrations/shield-leptos-actix", optional = true  }
 shield-oidc = { path = "../../packages/providers/shield-oidc", optional = true }
 wasm-bindgen.workspace = true
 
@@ -37,12 +37,11 @@ ssr = [
     "dep:actix-session",
     "dep:actix-web",
     "dep:leptos_actix",
-    "dep:shield-actix",
+    "dep:shield-leptos-actix",
     "dep:shield-oidc",
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
-    "shield-leptos/actix",
 ]
 
 [package.metadata.leptos]
