--- a/packages/integrations/shield-axum/Cargo.toml
+++ b/packages/integrations/shield-axum/Cargo.toml
@@ -11,5 +11,7 @@ version.workspace = true
 [dependencies]
 async-trait.workspace = true
 axum.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 shield = { path = "../../core/shield" }
 shield-tower = { path = "../shield-tower" }
