Shield: Add user generic

--- a/packages/providers/shield-oidc/Cargo.toml
+++ b/packages/providers/shield-oidc/Cargo.toml
@@ -10,6 +10,7 @@ version.workspace = true
 
 [dependencies]
 async-trait.workspace = true
-oauth2 = {version = "4.4.2", features = ["pkce-plain"]}
+chrono.workspace = true
+oauth2 = { version = "4.4.2", features = ["pkce-plain"] }
 openidconnect = "3.5.0"
 shield = { path = "../../core/shield" }
