--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4.9.0"
 async-std = "1.13.0"
 async-trait = "0.1.83"
 axum = "0.7.9"
+chrono = "0.4.39"
 console_error_panic_hook = "0.1.2"
 futures = "0.3.31"
 http = "1.2.0"
