--- a/examples/leptos-actix/Cargo.toml
+++ b/examples/leptos-actix/Cargo.toml
@@ -23,9 +23,10 @@ leptos.workspace = true
 leptos_actix = { workspace = true, optional = true }
 leptos_meta.workspace = true
 leptos_router.workspace = true
-shield = { path = "../../packages/core/shield", features = ["dummy"] }
+shield = { path = "../../packages/core/shield" }
 shield-leptos = { path = "../../packages/integrations/shield-leptos" }
-shield-leptos-actix = { path = "../../packages/integrations/shield-leptos-actix", optional = true  }
+shield-leptos-actix = { path = "../../packages/integrations/shield-leptos-actix", optional = true }
+shield-memory = { path = "../../packages/storage/shield-memory" }
 shield-oidc = { path = "../../packages/providers/shield-oidc", optional = true }
 wasm-bindgen.workspace = true
 
@@ -42,6 +43,7 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "shield-memory/provider-oidc",
 ]
 
 [package.metadata.leptos]
