--- a/examples/leptos-axum/Cargo.toml
+++ b/examples/leptos-axum/Cargo.toml
@@ -19,9 +19,10 @@ leptos.workspace = true
 leptos_axum = { workspace = true, optional = true }
 leptos_meta.workspace = true
 leptos_router.workspace = true
-shield = { path = "../../packages/core/shield", features = ["dummy"] }
+shield = { path = "../../packages/core/shield" }
 shield-leptos = { path = "../../packages/integrations/shield-leptos" }
 shield-leptos-axum = { path = "../../packages/integrations/shield-leptos-axum", optional = true }
+shield-memory = { path = "../../packages/storage/shield-memory" }
 shield-oidc = { path = "../../packages/providers/shield-oidc", optional = true }
 time = "0.3.37"
 tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
@@ -41,6 +42,7 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
+    "shield-memory/provider-oidc",
 ]
 
 [package.metadata.leptos]
