Shield Leptos: Move integration trait

--- a/packages/integrations/shield-leptos-actix/Cargo.toml
+++ b/packages/integrations/shield-leptos-actix/Cargo.toml
@@ -14,3 +14,4 @@ leptos.workspace = true
 leptos_actix.workspace = true
 shield = { path = "../../core/shield" }
 shield-actix = { path = "../../integrations/shield-actix" }
+shield-leptos = { path = "../../integrations/shield-leptos" }
