--- a/packages/integrations/shield-leptos/Cargo.toml
+++ b/packages/integrations/shield-leptos/Cargo.toml
@@ -9,5 +9,6 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
+async-trait.workspace = true
 leptos.workspace = true
 shield = { path = "../../core/shield" }
