--- a/packages/storage/shield-sea-orm/Cargo.toml
+++ b/packages/storage/shield-sea-orm/Cargo.toml
@@ -13,18 +13,26 @@ async-trait.workspace = true
 sea-orm.workspace = true
 sea-orm-migration.workspace = true
 serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 shield = { path = "../../core/shield" }
+shield-credentials = { path = "../../providers/shield-credentials", optional = true }
+shield-email = { path = "../../providers/shield-email", optional = true }
+shield-oauth = { path = "../../providers/shield-oauth", optional = true }
+shield-oidc = { path = "../../providers/shield-oidc", optional = true }
+shield-webauthn = { path = "../../providers/shield-webauthn", optional = true }
 
 [features]
 default = []
 entity = []
 all-providers = [
+    "provider-credentials",
     "provider-email",
     "provider-oauth",
     "provider-oidc",
     "provider-webauthn",
 ]
-provider-email = []
-provider-oauth = []
-provider-oidc = []
-provider-webauthn = []
+provider-credentials = ["dep:shield-credentials"]
+provider-email = ["dep:shield-email"]
+provider-oauth = ["dep:shield-oauth"]
+provider-oidc = ["dep:shield-oidc"]
+provider-webauthn = ["dep:shield-webauthn"]
