Shield Memory: Add user storage

--- a/packages/storage/shield-memory/Cargo.toml
+++ b/packages/storage/shield-memory/Cargo.toml
@@ -16,6 +16,7 @@ shield-email = { path = "../../providers/shield-email", optional = true }
 shield-oauth = { path = "../../providers/shield-oauth", optional = true }
 shield-oidc = { path = "../../providers/shield-oidc", optional = true }
 shield-webauthn = { path = "../../providers/shield-webauthn", optional = true }
+uuid = { workspace = true, features = ["v4"] }
 
 [features]
 default = []
