--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,5 @@ tokio = "1.42.0"
 tower-layer = "0.3.3"
 tower-service = "0.3.3"
 tower-sessions = "0.13.0"
+uuid = "1.11.0"
 wasm-bindgen = "0.2.97"
