Shield: Add user extractor

--- a/packages/storage/shield-memory/Cargo.toml
+++ b/packages/storage/shield-memory/Cargo.toml
@@ -10,12 +10,14 @@ version.workspace = true
 
 [dependencies]
 async-trait.workspace = true
+serde.workspace = true
 shield = { path = "../../core/shield" }
 shield-credentials = { path = "../../providers/shield-credentials", optional = true }
 shield-email = { path = "../../providers/shield-email", optional = true }
 shield-oauth = { path = "../../providers/shield-oauth", optional = true }
 shield-oidc = { path = "../../providers/shield-oidc", optional = true }
 shield-webauthn = { path = "../../providers/shield-webauthn", optional = true }
+typetag.workspace = true
 uuid = { workspace = true, features = ["v4"] }
 
 [features]
