--- a/packages/core/shield/Cargo.toml
+++ b/packages/core/shield/Cargo.toml
@@ -10,8 +10,9 @@ version.workspace = true
 
 [dependencies]
 async-trait.workspace = true
-chrono.workspace = true
+chrono = { workspace = true, features = ["serde"] }
 futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
+typetag.workspace = true
