--- a/examples/leptos-axum/Cargo.toml
+++ b/examples/leptos-axum/Cargo.toml
@@ -27,7 +27,10 @@ shield-oidc = { path = "../../packages/providers/shield-oidc", optional = true }
 time = "0.3.37"
 tokio = { workspace = true, features = ["rt-multi-thread"], optional = true }
 tower-sessions = { workspace = true, optional = true }
+tracing.workspace = true
+tracing-subscriber.workspace = true
 wasm-bindgen.workspace = true
+wasm-tracing.workspace = true
 
 [features]
 default = ["ssr"]
