--- a/packages/core/shield/Cargo.toml
+++ b/packages/core/shield/Cargo.toml
@@ -15,4 +15,5 @@ futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
+tracing.workspace = true
 typetag.workspace = true
