--- a/packages/integrations/shield-tower/Cargo.toml
+++ b/packages/integrations/shield-tower/Cargo.toml
@@ -15,3 +15,4 @@ shield = { path = "../../core/shield" }
 tower-layer.workspace = true
 tower-service.workspace = true
 tower-sessions.workspace = true
+tracing.workspace = true
