--- a/packages/providers/shield-oidc/Cargo.toml
+++ b/packages/providers/shield-oidc/Cargo.toml
@@ -14,3 +14,4 @@ chrono.workspace = true
 oauth2 = { version = "4.4.2", features = ["pkce-plain"] }
 openidconnect = "3.5.0"
 shield = { path = "../../core/shield" }
+tracing.workspace = true
