Shield Leptos: Fix hydration

--- a/packages/integrations/shield-leptos/Cargo.toml
+++ b/packages/integrations/shield-leptos/Cargo.toml
@@ -11,4 +11,5 @@ version.workspace = true
 [dependencies]
 async-trait.workspace = true
 leptos.workspace = true
+serde.workspace = true
 shield = { path = "../../core/shield" }
