--- a/packages/providers/shield-oidc/Cargo.toml
+++ b/packages/providers/shield-oidc/Cargo.toml
@@ -13,5 +13,5 @@ async-trait.workspace = true
 chrono.workspace = true
 oauth2 = { version = "4.4.2", features = ["pkce-plain"] }
 openidconnect = "3.5.0"
-shield = { path = "../../core/shield" }
+shield = { path = "../../core/shield", version = "0.0.2" }
 tracing.workspace = true
