--- a/packages/core/shield/Cargo.toml
+++ b/packages/core/shield/Cargo.toml
@@ -12,7 +12,7 @@ version.workspace = true
 async-trait.workspace = true
 chrono = { workspace = true, features = ["serde"] }
 futures.workspace = true
-serde.workspace = true
+serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
