--- a/packages/integrations/shield-leptos-actix/Cargo.toml
+++ b/packages/integrations/shield-leptos-actix/Cargo.toml
@@ -12,6 +12,6 @@ version.workspace = true
 async-trait.workspace = true
 leptos.workspace = true
 leptos_actix.workspace = true
-shield = { path = "../../core/shield" }
-shield-actix = { path = "../../integrations/shield-actix" }
-shield-leptos = { path = "../../integrations/shield-leptos" }
+shield = { path = "../../core/shield", version = "0.0.2" }
+shield-actix = { path = "../../integrations/shield-actix", version = "0.0.2" }
+shield-leptos = { path = "../../integrations/shield-leptos", version = "0.0.2" }
