--- a/packages/integrations/shield-leptos-axum/Cargo.toml
+++ b/packages/integrations/shield-leptos-axum/Cargo.toml
@@ -12,6 +12,6 @@ version.workspace = true
 async-trait.workspace = true
 leptos.workspace = true
 leptos_axum.workspace = true
-shield = { path = "../../core/shield" }
-shield-axum = { path = "../../integrations/shield-axum" }
-shield-leptos = { path = "../../integrations/shield-leptos" }
+shield = { path = "../../core/shield", version = "0.0.2" }
+shield-axum = { path = "../../integrations/shield-axum", version = "0.0.2" }
+shield-leptos = { path = "../../integrations/shield-leptos", version = "0.0.2" }
