--- a/packages/storage/shield-memory/Cargo.toml
+++ b/packages/storage/shield-memory/Cargo.toml
@@ -11,12 +11,12 @@ version.workspace = true
 [dependencies]
 async-trait.workspace = true
 serde.workspace = true
-shield = { path = "../../core/shield" }
-shield-credentials = { path = "../../providers/shield-credentials", optional = true }
-shield-email = { path = "../../providers/shield-email", optional = true }
-shield-oauth = { path = "../../providers/shield-oauth", optional = true }
-shield-oidc = { path = "../../providers/shield-oidc", optional = true }
-shield-webauthn = { path = "../../providers/shield-webauthn", optional = true }
+shield = { path = "../../core/shield", version = "0.0.2" }
+shield-credentials = { path = "../../providers/shield-credentials", version = "0.0.2", optional = true }
+shield-email = { path = "../../providers/shield-email", version = "0.0.2", optional = true }
+shield-oauth = { path = "../../providers/shield-oauth", version = "0.0.2", optional = true }
+shield-oidc = { path = "../../providers/shield-oidc", version = "0.0.2", optional = true }
+shield-webauthn = { path = "../../providers/shield-webauthn", version = "0.0.2", optional = true }
 uuid = { workspace = true, features = ["v4"] }
 
 [features]
