--- a/packages/storage/shield-sea-orm/Cargo.toml
+++ b/packages/storage/shield-sea-orm/Cargo.toml
@@ -15,24 +15,27 @@ sea-orm-migration.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 shield = { path = "../../core/shield", version = "0.0.2" }
-shield-credentials = { path = "../../providers/shield-credentials", version = "0.0.2", optional = true }
-shield-email = { path = "../../providers/shield-email", version = "0.0.2", optional = true }
-shield-oauth = { path = "../../providers/shield-oauth", version = "0.0.2", optional = true }
+# shield-credentials = { path = "../../providers/shield-credentials", version = "0.0.2", optional = true }
+# shield-email = { path = "../../providers/shield-email", version = "0.0.2", optional = true }
+# shield-oauth = { path = "../../providers/shield-oauth", version = "0.0.2", optional = true }
 shield-oidc = { path = "../../providers/shield-oidc", version = "0.0.2", optional = true }
-shield-webauthn = { path = "../../providers/shield-webauthn", version = "0.0.2", optional = true }
+# shield-webauthn = { path = "../../providers/shield-webauthn", version = "0.0.2", optional = true }
 
 [features]
 default = []
 entity = []
 all-providers = [
-    "provider-credentials",
+    # "provider-credentials",
     "provider-email",
     "provider-oauth",
     "provider-oidc",
-    "provider-webauthn",
+    # "provider-webauthn",
 ]
-provider-credentials = ["dep:shield-credentials"]
-provider-email = ["dep:shield-email"]
-provider-oauth = ["dep:shield-oauth"]
+# provider-credentials = ["dep:shield-credentials"]
+# provider-email = ["dep:shield-email"]
+# provider-oauth = ["dep:shield-oauth"]
+# provider-credentials = []
+provider-email = []
+provider-oauth = []
 provider-oidc = ["dep:shield-oidc"]
-provider-webauthn = ["dep:shield-webauthn"]
+# provider-webauthn = ["dep:shield-webauthn"]
