--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4.9.0"
 async-std = "1.13.0"
 async-trait = "0.1.83"
 axum = "0.7.9"
+bon = "3.3.2"
 chrono = "0.4.39"
 console_error_panic_hook = "0.1.2"
 futures = "0.3.31"
@@ -38,5 +39,5 @@ tower-sessions = "0.13.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 uuid = "1.11.0"
-wasm-bindgen = "0.2.97"
+wasm-bindgen = "0.2.99"
 wasm-tracing = "1.0.1"
