--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,11 @@ chrono = "0.4.39"
 console_error_panic_hook = "0.1.2"
 futures = "0.3.31"
 http = "1.2.0"
-leptos = "0.7.0"
-leptos_actix = "0.7.0"
-leptos_axum = "0.7.0"
-leptos_meta = "0.7.0"
-leptos_router = "0.7.0"
+leptos = "0.7.4"
+leptos_actix = "0.7.4"
+leptos_axum = "0.7.4"
+leptos_meta = "0.7.4"
+leptos_router = "0.7.4"
 thiserror = "2.0.7"
 sea-orm = "1.1.2"
 sea-orm-migration = "1.1.2"
@@ -38,6 +38,7 @@ tower-service = "0.3.3"
 tower-sessions = "0.13.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
 uuid = "1.11.0"
-wasm-bindgen = "0.2.99"
+wasm-bindgen = "0.2.100"
 wasm-tracing = "1.0.1"
