--- a/examples/leptos-axum/Cargo.toml
+++ b/examples/leptos-axum/Cargo.toml
@@ -21,7 +21,9 @@ leptos_meta.workspace = true
 leptos_router.workspace = true
 shield = { path = "../../packages/core/shield" }
 shield-leptos = { path = "../../packages/integrations/shield-leptos" }
-shield-leptos-axum = { path = "../../packages/integrations/shield-leptos-axum", optional = true }
+shield-leptos-axum = { path = "../../packages/integrations/shield-leptos-axum", features = [
+    "utoipa",
+], optional = true }
 shield-memory = { path = "../../packages/storage/shield-memory", optional = true }
 shield-oidc = { path = "../../packages/providers/shield-oidc", optional = true }
 time = "0.3.37"
@@ -31,6 +33,12 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 wasm-bindgen.workspace = true
 wasm-tracing.workspace = true
+utoipa.workspace = true
+utoipa-swagger-ui = { version = "=8.1.0", features = [
+    "axum",
+    "reqwest",
+    "vendored",
+] }
 
 [features]
 default = ["ssr"]
