--- a/packages/core/shield/Cargo.toml
+++ b/packages/core/shield/Cargo.toml
@@ -16,3 +16,8 @@ serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
+utoipa = { workspace = true, optional = true }
+
+[features]
+default = []
+utoipa = ["dep:utoipa"]
