--- a/packages/integrations/shield-axum/Cargo.toml
+++ b/packages/integrations/shield-axum/Cargo.toml
@@ -15,3 +15,8 @@ serde.workspace = true
 serde_json.workspace = true
 shield = { path = "../../core/shield", version = "0.0.4" }
 shield-tower = { path = "../shield-tower", version = "0.0.4" }
+utoipa = { workspace = true, features = ["axum_extras"], optional = true }
+
+[features]
+default = []
+utoipa = ["dep:utoipa"]
