--- a/packages/core/shield/Cargo.toml
+++ b/packages/core/shield/Cargo.toml
@@ -10,6 +10,7 @@ version.workspace = true
 
 [dependencies]
 async-trait.workspace = true
+bon.workspace = true
 chrono = { workspace = true, features = ["serde"] }
 futures.workspace = true
 serde = { workspace = true, features = ["derive"] }
