feat(shield): move provider session data to provider

--- a/packages/providers/shield-oidc/Cargo.toml
+++ b/packages/providers/shield-oidc/Cargo.toml
@@ -14,5 +14,6 @@ bon.workspace = true
 chrono.workspace = true
 oauth2 = { version = "5.0.0", features = ["pkce-plain"] }
 openidconnect = "4.0.0"
+serde.workspace = true
 shield = { path = "../../core/shield", version = "0.0.4" }
 tracing.workspace = true
