chore(deps): update rust crate leptos to v0.8.0-beta

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,17 +16,17 @@ actix-utils = "3.0.1"
 actix-web = "4.9.0"
 async-std = "1.13.0"
 async-trait = "0.1.83"
-axum = "0.7.9"
+axum = "0.8.1"
 bon = "3.3.2"
 chrono = "0.4.39"
 console_error_panic_hook = "0.1.2"
 futures = "0.3.31"
 http = "1.2.0"
-leptos = "0.7.4"
-leptos_actix = "0.7.4"
-leptos_axum = "0.7.4"
-leptos_meta = "0.7.4"
-leptos_router = "0.7.4"
+leptos = "0.8.0-beta"
+leptos_actix = "0.8.0-beta"
+leptos_axum = "0.8.0-beta"
+leptos_meta = "0.8.0-beta"
+leptos_router = "0.8.0-beta"
 thiserror = "2.0.7"
 sea-orm = "1.1.2"
 sea-orm-migration = "1.1.2"
@@ -35,7 +35,7 @@ serde_json = "1.0.133"
 tokio = "1.42.0"
 tower-layer = "0.3.3"
 tower-service = "0.3.3"
-tower-sessions = "0.13.0"
+tower-sessions = "0.14.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 utoipa = { version = "5.3.1", features = ["chrono", "uuid"] }
