--- a/examples/leptos-axum/Cargo.toml
+++ b/examples/leptos-axum/Cargo.toml
@@ -36,7 +36,7 @@ tracing-subscriber.workspace = true
 wasm-bindgen.workspace = true
 wasm-tracing.workspace = true
 utoipa.workspace = true
-utoipa-swagger-ui = { version = "=8.1.0", features = ["axum", "vendored"] }
+utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
 
 [features]
 default = ["ssr"]
