fix(shield-axum): enable utoipa feature for shield

--- a/packages/integrations/shield-axum/Cargo.toml
+++ b/packages/integrations/shield-axum/Cargo.toml
@@ -18,4 +18,4 @@ utoipa = { workspace = true, features = ["axum_extras"], optional = true }
 
 [features]
 default = []
-utoipa = ["dep:utoipa"]
+utoipa = ["dep:utoipa", "shield/utoipa"]
