chore: change organisation name capitalisation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@rustforweb/shield",
     "description": "Web authentication for Rust.",
-    "author": "Rust For Web <info@rustforweb.org>",
+    "author": "Rust for Web <info@rustforweb.org>",
     "repository": "github:RustForWeb/shield",
     "license": "MIT",
     "private": true,
